--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
                 </div>
             </div>
         </section>
+        <div class="app__card--work-list">
+            <div class="app__card--work-list-container">
+                <h1 class="app__card--work-list-title">Lista de tarefas:</h1>
+                <ul id="task-list">
+                    <!-- As tarefas serão adicionadas aqui -->
+                </ul>
+            <button id="add-task-btn">Adicionar nova tarefa</button>
+            </div>
+        </div>
 
         <footer class="app__footer">
             <p class="app__footer-text">
